--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="hero">
         <nav>
-            <img src="images/LOGO2.png" class="logo">
+            <img src="LOGO2.png" class="logo">
             <ul>
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">ABOUT</a></li>
@@ -27,8 +27,8 @@
             <a href="#">Downdload CV</a>
         </div>
         <div class="images">
-            <img src="images/shape.png" class="shape">
-            <img src="images/me.png" class="girl">
+            <img src="shape.png" class="shape">
+            <img src="me.png" class="girl">
         </div>
 
         <div class="social">
