--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </div>
 
         <div class="social">
-           <a href="https://github.com/pritiranjan-01"><i class="fab fa-github"></i></a>
-           <a href="https://www.instagram.com/thisispritiranjan/"><i class="fab fa-instagram"></i></a>
-           <a href="https://www.youtube.com/@pritiranjanXmohanty"><i class="fab fa-youtube"></i></a>
+          <a href="https://github.com/pritiranjan-01"><i class="fab fa-github"></i></a>
+           <a href="https://www.linkedin.com/in/pritiranjan-mohanty-681232259/"><i class="fab fa-linkedin"></i></a>
+           <a href="https://www.hackerrank.com/pritiranjan_moh1"><i class="fab fa-hackerrank"></i></a>
         </div>
     </div>
 </body>
