--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="images">
             <img src="shape.png" class="shape">
-            <img src="me.png" class="girl">
+            <img src="me.png" class="boy">
         </div>
 
         <div class="social">
